# hercare360

./: .env.example  Dockerfile.clinical  Dockerfile.ops  pyproject.toml  railway.toml  start.sh
clinical/: main.py
clinical/tools/: __init__.py  care_gaps.py  consultation_readiness.py  drug_interactions.py  lab_trends.py  med_reconciliation.py  pre_visit_summary.py  reason_about_patient.py  total_woman_care.py  urgency_tools.py
data/: appointments.json  fhir_bundle_women.json  foods.json  interactions.json  patients.json  rooms.json  staff.json
ops/: main.py
ops/tools/: __init__.py  appointment_mgr.py  business_intel.py  conflict_resolver.py  enterprise_ops.py  patient_journey.py  room_allocator.py  staff_ops.py
shared/: a2a_client.py
